--- a/resume.tex
+++ b/resume.tex
@@ -138,6 +138,9 @@
   
  \section{Дополнительное образование}
   \resumeSubHeadingListStart
+      \resumeSubheading
+      {Школа 21}{Сен. 2022 - }
+      {Школа 21 Сбер}{}
       
       \resumeSubheading
       {Курс "Алгоритмы и структуры данных"\ в рамках трека Web-разработчик}{}
@@ -146,10 +149,6 @@
       \resumeSubheading
       {Курс "Web-технологии"\ в рамках трека Web-разработчик}{}
       {Vk Образование}{}
-      
-      \resumeSubheading
-      {Интенсив школы 21}{}
-      {Школа 21 Сбер}{}
       
       \resumeSubheading
       {Подготовительная программа по программированию на C/C++}{}
@@ -278,4 +277,3 @@
 
 
 \end{document}
-
