--- a/resume.tex
+++ b/resume.tex
@@ -77,7 +77,7 @@
     \begin{tabular*}{1.0\textwidth}[t]{l@{\extracolsep{\fill}}r}
       \textbf{#1} & \textbf{\small #2} \\
       \textit{\small#3} & \textit{\small #4} \\
-    \end{tabular*}\vspace{-7pt}
+    \end{tabular*}\vspace{-5pt}
 }
 
 \newcommand{\resumeSubSubheading}[2]{
@@ -118,56 +118,81 @@
 
 \begin{center}
     {\Huge \scshape Литвинова Юлия} \\ \vspace{6pt}
+    % {\large \scshape Junior Golang Developer} \\ \vspace{6pt}
     \small \raisebox{-0.1\height}\faPhone\ \underline{+7 (963) 925-44-31} ~ \href{mailto:x@gmail.com}{\raisebox{-0.2\height}\faEnvelope\  \underline{makcika@inbox.ru}} ~ 
     \href{https://linkedin.com/in//}{\raisebox{-0.2\height}\faTelegram\ \underline{@Jul\_perry}}  ~
     \href{https://github.com/}{\raisebox{-0.2\height}\faGithub\ \underline{github.com/Julia1505}}
-    \vspace{-8pt}
+    \vspace{-12pt}
 \end{center}
 
+\section{О себе}
+    \resumeSubHeadingListStart
+Люблю писать код и получаю от этого удовольствие, поэтому хочу работать и развиться в этой сфере в качестве разработчика.
+\vspace{-8pt}
+ \resumeSubHeadingListEnd
+
+
+\section{Опыт работы}
+  \resumeSubHeadingListStart
+
+    \resumeSubheading
+      {Лаборатория Касперского}{Февраль 2023 -- по наст.вр.}
+      {Стажер}{Москва}
+      \resumeItemListStart
+        \resumeItem{Реализация интеграций KUMA с внешними и внутренними продуктами и системами, путем настройки аудита продукта и сбора ИБ логов}
+        \resumeItem{Написание парсеров данных для новых источников (regexp, json, xml, syslog)}
+        \resumeItem{Написание утилит на Go для автоматизации процесса сбора, отправки логов и написания парсеров}
+
+      \resumeItemListEnd
+    
+  \resumeSubHeadingListEnd
+\vspace{-20pt}
 
 %-----------EDUCATION-----------
 \section{Образование}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {МГТУ им. Н.Э.Баумана}{Сен. 2019 -- Июль. 2023}
-      {Бакалавр "Управление в технических системах"\ код:  \textbf{27.03.04}}{Москва}
-       \resumeSubheading
-      {Школа 1502 при МЭИ}{}
-      {Среднее полное образование}{Москва}
+      {МГТУ им. Н.Э.Баумана}{Сентябрь 2019 -- Июль 2023}
+      {Бакалавр "Управление в технических системах" код:  \textbf{ 27.03.04}}{Москва}
+
+\vspace{-13pt}
   \resumeSubHeadingListEnd
   
  \section{Дополнительное образование}
   \resumeSubHeadingListStart
-      \resumeSubheading
-      {Школа 21}{Сен. 2022 - }
-      {Школа 21 Сбер}{}
-      
-      \resumeSubheading
-      {Курс "Алгоритмы и структуры данных"\ в рамках трека Web-разработчик}{}
-      {Vk Образование}{}
-      
-      \resumeSubheading
-      {Курс "Web-технологии"\ в рамках трека Web-разработчик}{}
-      {Vk Образование}{}
-      
-      \resumeSubheading
-      {Подготовительная программа по программированию на C/C++}{}
-      {Vk Образование}{}
-      
-      
 
-    % \resumeSubheading
-    %   {Startup, Inc}{May 2019 -- August 2019}
-    %   {Front End Developer Intern}{City, State}
-    %   \resumeItemListStart
-    %     \resumeItem{Assisted in development of the front end of a mobile application for iOS/Android using Dart and the Flutter framework.}
-    %     \resumeItem{Worked with Google Firebase to manage user inputted data across multiple platforms including web and mobile apps.}
-    %     \resumeItem{Collaborated with team members using version control systems such as Git to organize modifications and assign tasks.}
-    %     \resumeItem{Utilized Android Studio as a development environment in order to visualize the application in both iOS and Android.}
-    % \resumeItemListEnd
+    \resumeSubheading
+      {Школа 21}{Октябрь 2022 -- по наст.вр.}
+      {Школа 21 Сбер}{}
+      \resumeItemListStart
+        \resumeItem{Сделала командные проекты Decimal, String+ и другие}
+        \resumeItem{Сделала проекты по настройке сетей на Linux, Docker, CI/CD}
+    \resumeItemListEnd
+
+    \resumeSubheading
+      {Курс "Web-технологии" в рамках трека Web-разработчик}{Весна 2022}
+      {Vk Образование}{}
+      \resumeItemListStart
+        \resumeItem{Сделала Web-приложение на языке Python с использованием MVC фреймворка Django и БД MySQL https://github.com/Julia1505/WEB}
+       
+    \resumeItemListEnd
+
+    \resumeSubheading
+      {Курс "Алгоритмы и структуры данных" в рамках трека Web-разработчик}{Весна 2022}
+      {Vk Образование}{}
+      \resumeItemListStart
+         \resumeItem{Изучила основные алгоритмы и структуры данных и применила на практике https://github.com/Julia1505/Alg\_2, https://github.com/Julia1505/Alg\_3}
+    \resumeItemListEnd
+
+    \resumeSubheading
+      {Подготовительная программа по программированию на C/C++}{Январь 2021}
+      {Vk Образование}{}
+      \resumeItemListStart
+        \resumeItem{Сделала 6 ДЗ на C/C++ и командный проект Walk-of-Cringe (игра-лабиринт методом ray casting  https://github.com/Julia1505/Walk-of-Cringe}
+    \resumeItemListEnd
     
   \resumeSubHeadingListEnd
-\vspace{-16pt}
+\vspace{-20pt}
 
 
 % %------RELEVANT COURSEWORK-------
@@ -179,91 +204,60 @@
 %                 \item Software Methodology
 %                 \item Algorithms Analysis
 %                 \item Database Management
-%                 \item Artificial Intelligence
-%                 \item Internet Technology
-%                 \item Systems Programming
-%                 \item Computer Architecture
+
 %             \end{itemize}
 %         \end{multicols}
 %         \vspace*{2.0\multicolsep}
 %     %\resumeSubHeadingListEnd
 
 
-% %-----------EXPERIENCE-----------
-% \section{Experience}
-%   \resumeSubHeadingListStart
+%-----------EXPERIENCE-----------
 
-%     \resumeSubheading
-%       {Electronics Company}{May 2020 -- August 2020}
-%       {Software Engineer Intern}{City, State}
-%       \resumeItemListStart
-%         \resumeItem{Developed a service to automatically perform a set of unit tests daily on a product in development in order to decrease time needed for team members to identify and fix bugs/issues.}
-%         \resumeItem{Incorporated scripts using Python and PowerShell to aggregate XML test results into an organized format and to load the latest build code onto the hardware, so that daily testing can be performed.}
-%         \resumeItem{Utilized Jenkins to provide a continuous integration service in order to automate the entire process of loading the latest build code and test files, running the tests, and generating a report of the results once per day.}
-%         \resumeItem{Explored ways to visualize and send a daily report of test results to team members  using HTML, Javascript, and CSS.}
-%       \resumeItemListEnd
-
-%     \resumeSubheading
-%       {Startup, Inc}{May 2019 -- August 2019}
-%       {Front End Developer Intern}{City, State}
-%       \resumeItemListStart
-%         \resumeItem{Assisted in development of the front end of a mobile application for iOS/Android using Dart and the Flutter framework.}
-%         \resumeItem{Worked with Google Firebase to manage user inputted data across multiple platforms including web and mobile apps.}
-%         \resumeItem{Collaborated with team members using version control systems such as Git to organize modifications and assign tasks.}
-%         \resumeItem{Utilized Android Studio as a development environment in order to visualize the application in both iOS and Android.}
-%     \resumeItemListEnd
-    
-%   \resumeSubHeadingListEnd
-% \vspace{-16pt}
 
 %-----------PROJECTS-----------
-% \section{Projects}
-%     \vspace{-5pt}
-%     \resumeSubHeadingListStart
-%       \resumeProjectHeading
-%           {\textbf{Gym Reservation Bot} $|$ \emph{Python, Selenium, Google Cloud Console}}{January 2021}
-%           \resumeItemListStart
-%             \resumeItem{Developed an automatic bot using Python and Google Cloud Console to register myself for a timeslot at my school gym.}
-%             \resumeItem{Implemented Selenium to create an instance of Chrome in order to interact with the correct elements of the web page.}
-%             \resumeItem{Created a Linux virtual machine to run on Google Cloud so that the program is able to run everyday from the cloud.}
-%             \resumeItem{Used Cron to schedule the program to execute automatically at 11 AM every morning so a reservation is made for me.}
-%           \resumeItemListEnd
-%           \vspace{-13pt}
-%       \resumeProjectHeading
-%           {\textbf{Ticket Price Calculator App} $|$ \emph{Java, Android Studio}}{November 2020}
-%           \resumeItemListStart
-%             \resumeItem{Created an Android application using Java and Android Studio to calculate ticket prices for trips to museums in NYC.}
-%             \resumeItem{Processed user inputted information in the back-end of the app to return a subtotal price based on the tickets selected.}
-%             \resumeItem{Utilized the layout editor to create a UI for the application in order to allow different scenes to interact with each other.}
-%           \resumeItemListEnd 
-%           \vspace{-13pt}
-%           \resumeProjectHeading
-%           {\textbf{Transaction Management GUI} $|$ \emph{Java, Eclipse, JavaFX}}{October 2020}
-%           \resumeItemListStart
-%             \resumeItem{Designed a sample banking transaction system using Java to simulate the common functions of using a bank account.}
-%             \resumeItem{Used JavaFX to create a GUI that supports actions such as creating an account, deposit, withdraw, list all acounts, etc.}
-%             \resumeItem{Implemented object-oriented programming practices such as inheritance to create different account types and databases.}
-%           \resumeItemListEnd 
-%     \resumeSubHeadingListEnd
-% \vspace{-15pt}
+\section{Проекты}
+    \vspace{-5pt}
+    \resumeSubHeadingListStart
+      \resumeProjectHeading
+          {\textbf{Backend для RedditClone} $|$ \emph{Go, MongoDB, MySQL, Docker, JWT}}{}
+          \resumeItemListStart
+            \resumeItem{CRUD запросы + JWT авторизация + БД:  https://github.com/Julia1505/RedditCloneBack}
+
+          \resumeItemListEnd
+          \vspace{-17pt}
+
+    \resumeProjectHeading
+          {\textbf{Телеграм бот таскменеджер} $|$ \emph{Go}}{}
+          \resumeItemListStart
+            \resumeItem{https://github.com/Julia1505/TelegramBot}
+          \resumeItemListEnd
+          \vspace{-17pt}
+
+     \resumeProjectHeading
+          {\textbf{Game of Life} $|$ \emph{C, Makefile}}{}
+          \resumeItemListStart
+            \resumeItem{Залипательная консольная игра на С: https://github.com/Julia1505/GameOfLife}
+          \resumeItemListEnd
+          \vspace{-10pt}
+    \resumeSubHeadingListEnd
+\vspace{-15pt}
 
 
 %
 %-----------PROGRAMMING SKILLS-----------
-\section{Стек технологий}
+\section{Скилы}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Языки программрования}{: C, C++, Go, Bash, Python, SQL} \\
-    %  \textbf{Developer Tools}{: VS Code, Eclipse, Google Cloud Platform, Android Studio} \\
-    
-    
-     \textbf{Технологии и фреймфорки}{: Linux, Git, Bootstrap, Django,  HTML/CSS } \\
+     \textbf{Языки программирования}{: C,C++, Go, Bash, Python,   SQL} \\
+     \textbf{Технологии и фреймворки}{: Linux, Git, Docker, CI/CD, Django} \\
     }}
  \end{itemize}
+
+ 
  \vspace{-16pt}
 
 
-%-----------INVOLVEMENT---------------
+% %-----------INVOLVEMENT---------------
 % \section{Leadership / Extracurricular}
 %     \resumeSubHeadingListStart
 %         \resumeSubheading{Fraternity}{Spring 2020 -- Present}{President}{University Name}
